fix nav z-index

--- a/src/index.css
+++ b/src/index.css
@@ -155,10 +155,3 @@
 .shake {
   animation: shake 0.5s ease;
 }
-.portal {
-  position: fixed;
-  top: 0;
-  width: 100vw;
-  left: 0;
-  height: 100vh;
-}
